--- a/testePratico/site-clientes-main/chuva.inc/style.css
+++ b/testePratico/site-clientes-main/chuva.inc/style.css
@@ -81,7 +81,7 @@ main {
          transform: scale(1.2);
        }
      }
-     .botao {
+     .button1 {
        animation: pulse 1s infinite forwards alternate-reverse;
      }
 
